@@ -1,0 +1,6 @@
+color: grey
+size: 4
+shape: diamond
+color: green
+size: 
+shape: 
